# kakodemon

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
rc/: kakodemon.kak
src/: application.cpp  application.hpp  config.hpp.in  font.cpp  font.hpp  fontconfigresolver.cpp  fontconfigresolver.hpp  fontengine.hpp  freetypefontengine.cpp  freetypefontengine.hpp  kakodemon_integration_kakscript.hpp.in  main.cpp  opengl.hpp  renderer.hpp
src/adapters/fontconfig/: fontconfigresolver.cpp  fontconfigresolver.hpp
src/adapters/freetype/: freetypefontengine.cpp  freetypefontengine.hpp  freetypelibrary.cpp  freetypelibrary.hpp
src/adapters/kakoune/: atom.cpp  atom.hpp  color.cpp  color.hpp  coord.cpp  coord.hpp  face.cpp  face.hpp  infostyle.cpp  infostyle.hpp  jsonrpckakouneinterface.cpp  jsonrpckakouneinterface.hpp  kakouneclientprocess.cpp  kakouneclientprocess.hpp  kakouneframestatemanager.cpp  kakouneframestatemanager.hpp  line.cpp  line.hpp  localsession.cpp  localsession.hpp  menustyle.cpp  menustyle.hpp  remotesession.cpp  remotesession.hpp  statusstyle.cpp  statusstyle.hpp  uioptions.cpp  uioptions.hpp
src/adapters/namedpipe/: namedpipecommandinterface.cpp  namedpipecommandinterface.hpp
src/adapters/opengl/: application.cpp  application.hpp  font.cpp  font.hpp  renderer.cpp  renderer.hpp  shaderprogram.cpp  shaderprogram.hpp  window.cpp  window.hpp
src/application/: application.cpp  application.hpp  applicationbuilder.cpp  applicationbuilder.hpp  applicationconfig.cpp  applicationconfig.hpp  cliconfig.hpp  cliparser.cpp  cliparser.hpp  observerid.hpp  observerlist.hpp  scene.cpp  scene.hpp  window.hpp
src/application/controller/: commandcontroller.cpp  commandcontroller.hpp  editorcontroller.cpp  editorcontroller.hpp  focuscontroller.cpp  focuscontroller.hpp  infoboxcontroller.cpp  infoboxcontroller.hpp  inputcontroller.cpp  inputcontroller.hpp  layoutcontroller.cpp  layoutcontroller.hpp  menucontroller.cpp  menucontroller.hpp  mousecontroller.cpp  mousecontroller.hpp  movablemenucontroller.cpp  movablemenucontroller.hpp
src/application/controllers/: masterclientcontroller.cpp  masterclientcontroller.hpp
src/application/model/: clientmanager.cpp  clientmanager.hpp  focusedclientstack.cpp  focusedclientstack.hpp  kakouneclient.cpp  kakouneclient.hpp  panelayout.cpp  panelayout.hpp  uioptions.hpp  viewstate.hpp
src/application/view/: glyphsequence.cpp  glyphsequence.hpp  infobox.cpp  infobox.hpp  inlinemenu.cpp  inlinemenu.hpp  kakounecontentview.cpp  kakounecontentview.hpp  layoutmanager.cpp  layoutmanager.hpp  multistyledmenu.cpp  multistyledmenu.hpp  paneborderview.cpp  paneborderview.hpp  promptmenu.cpp  promptmenu.hpp  rendercontext.cpp  rendercontext.hpp  searchmenu.cpp  searchmenu.hpp  statusbar.cpp  statusbar.hpp  styling.hpp
src/application/view/widgets/: input.cpp  input.hpp  scrollbar.cpp  scrollbar.hpp  scrolledmenuitems.cpp  scrolledmenuitems.hpp
src/controller/: editorcontroller.cpp  editorcontroller.hpp  infoboxcontroller.cpp  infoboxcontroller.hpp  inputcontroller.cpp  inputcontroller.hpp  menucontroller.cpp  menucontroller.hpp
src/core/: alignment.cpp  alignment.hpp  color.hpp  cursor.hpp  editor.hpp  keys.hpp  utf8string.cpp  utf8string.hpp
src/domain/: alignment.cpp  alignment.hpp  atom.cpp  atom.hpp  color.cpp  color.hpp  coord.hpp  cursor.hpp  editor.hpp  eventfilters.hpp  face.cpp  face.hpp  fontmanager.cpp  fontmanager.hpp  geometry.cpp  geometry.hpp  glyphatom.cpp  glyphatom.hpp  glyphline.cpp  glyphline.hpp  glyphlines.cpp  glyphlines.hpp  glyphlinesbuilder.cpp  glyphlinesbuilder.hpp  infobox.hpp  keys.hpp  line.cpp  line.hpp  lines.cpp  lines.hpp  menu.cpp  menu.hpp  modeline.cpp  modeline.hpp  mouse.hpp  observerid.hpp  observerlist.hpp  statusline.cpp  statusline.hpp  uioptions.cpp  (+3 more)
src/domain/ports/: commandinterface.hpp  font.cpp  font.hpp  fontengine.hpp  fontresolver.hpp  kakouneinterface.cpp  kakouneinterface.hpp  kakounesession.cpp  kakounesession.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
src/kakoune/: atom.cpp  atom.hpp  color.cpp  color.hpp  coord.cpp  coord.hpp  face.cpp  face.hpp  infostyle.cpp  infostyle.hpp  kakouneclientprocess.cpp  kakouneclientprocess.hpp  kakouneframestatemanager.cpp  kakouneframestatemanager.hpp  line.cpp  line.hpp  menustyle.cpp  menustyle.hpp
src/model/: atom.cpp  atom.hpp  face.cpp  face.hpp  kakouneclient.cpp  kakouneclient.hpp  kakouneclientprocess.cpp  kakouneclientprocess.hpp  uioptions.hpp
src/opengl/: application.cpp  application.hpp  font.cpp  font.hpp  renderer.cpp  renderer.hpp  shaderprogram.cpp  shaderprogram.hpp
src/view/: glyphsequence.cpp  glyphsequence.hpp  infobox.cpp  infobox.hpp  inlinemenu.cpp  inlinemenu.hpp  kakounecontentview.cpp  kakounecontentview.hpp  layoutmanager.cpp  layoutmanager.hpp  menu.cpp  menu.hpp  promptmenu.cpp  promptmenu.hpp  statusbar.cpp  statusbar.hpp  styling.hpp  triangleview.cpp  triangleview.hpp
src/view/widgets/: input.cpp  input.hpp  scrollbar.cpp  scrollbar.hpp  scrolledmenuitems.cpp  scrolledmenuitems.hpp
test/: CMakeLists.txt
test/integration/: test_benchmark_latency.cpp  test_fontconfigresolver.cpp  test_kakouneclientprocess.cpp  test_localsession.cpp  test_namedpipecommandinterface.cpp
test/mocks/: mock_font.hpp  mock_kakounesession.hpp
test/unit/: test_cliparser.cpp  test_color.cpp  test_focusedclientstack.cpp  test_glyphlines.cpp  test_glyphlinesbuilder.cpp  test_infobox.cpp  test_line.cpp  test_masterclientcontroller.cpp  test_rectangle.cpp  test_utf8string.cpp
